Added a generic conversation if you talk to prospera in her house after getting the quest.

--- a/data/level/Forest/prosperas-house.cfg
+++ b/data/level/Forest/prosperas-house.cfg
@@ -130,6 +130,20 @@
 			},
 			"type": "prospera_npc",
 			"on_start_level": "if(level.player.get_stored_event('introduced_prosperas_workshop'), remove_object(me))",
+			"on_talk": "speech_dialog(
+							execute(prospera, [set(prospera.animation, 'emote_cross_arms'); sleep_until_animation_finished(); set(prospera.animation, 'emote_talk_with_arms_crossed')]),
+				prospera,	[~I see you've come back.~],
+							execute(prospera, [set(prospera.animation, 'emote_uncross_arms'); sleep_until_animation_finished(); set(prospera.animation, 'emote_talk')]),
+							[~I'm not about to kick you out of the house,\\nbut I <em>am</em> keeping an eye on you.~],
+							set(prospera.animation, 'emote_emphatic'),
+							[~Feel free to chat if you actually\\ntake on that construct, though.~],
+							set(prospera.animation, 'emote_talk'),
+							[~That would be wild.~],
+				)
+					where prospera = me
+					where frogatto = level.player
+			",
+
 			"x": 1596,
 			"y": 155
 		},
