Added a stub conversation to prospera in her workshop.

--- a/data/level/Forest/prosperas-workshop.cfg
+++ b/data/level/Forest/prosperas-workshop.cfg
@@ -28,7 +28,16 @@
 			},
 			"type": "prospera_npc",
 			"x": 753,
-			"y": 91
+			"y": 91,
+			"on_talk": "speech_dialog(
+							execute(prospera, [set(prospera.animation, 'emote_remove_hat'); sleep_until_animation_finished(); set(prospera.animation, 'emote_talk_with_hat_off')]),
+				prospera,	[~Hello again.~],
+							execute(prospera, [set(prospera.animation, 'emote_restore_hat'); sleep_until_animation_finished(); set(prospera.animation, 'emote_emphatic')]),
+							[~If you have questions about anything in the shop,\\ndon't hesistate to ask!~],
+				)
+					where prospera = me
+					where frogatto = level.player
+			",
 		},
 		{
 			"_uuid": "0130407b35c3477db25e876fba22b6be",
@@ -130,6 +139,8 @@
 										set(prospera.mid_x, 1600)
 										;
 										execute(prospera, move_to_standing() )
+										;
+										set(prospera.turning_behaviour, 'face_player')
 										;
 										remove_object(me)
 									]
