Make the elevator always become active after you beat the gazer boss.

--- a/data/level/Forest/prosperas-house.cfg
+++ b/data/level/Forest/prosperas-house.cfg
@@ -557,6 +557,9 @@
 										)
 									,'start_event')),
 									frogatto.add_control_lock([], 'prospera_cutscene'),
+									
+									/* this is mostly for the sequence break, but in either case, it's safe to add here */
+									frogatto.store_event('prosperas_elevator_active', 1),
 								]
 
 								
