Made a more agnostic intro dialogue for the gazer boss.

--- a/data/level/Forest/gazer-boss.cfg
+++ b/data/level/Forest/gazer-boss.cfg
@@ -776,8 +776,7 @@
 
 								
 								add_object(gazer_boss_spawner),
-								transient_speech_dialog(level.player, 50,	[~Uhh...~]),
-								schedule(51,  transient_speech_dialog(level.player, 150,	[~Oh man, she was <em>not</em> kidding!~])),
+								transient_speech_dialog(level.player, 50,	[~Oh no...!~]),
 								schedule(451, fire_event(me, 'script4')),
 							]	
 								where gazer_boss_spawner = object('gazer_boss.body_spawn_animation', 348 + 125, 2034 - 55 + 125, 1)
