--- a/data/items.cfg
+++ b/data/items.cfg
@@ -392,8 +392,10 @@
 		description: "~A delectable fruit or possibly vegetable.  Who can tell the difference these days?~",
 		count_limit: 20,
 		item_category: "@eval enum passive",
-		anim_rect: [0,23,0,23],
+		anim_rect: [0,0,31,31],
 		hud_img_rect: [0, 0, 39,39],
+		anim_image: "props/watercrust.png",
+		anim_frame_count: 1,
 	},
 	
 	
