Wired in a conversation for imoti after you've done all of the gazer-boss related quests.

--- a/data/level/Forest/rustic-route.cfg
+++ b/data/level/Forest/rustic-route.cfg
@@ -1042,35 +1042,50 @@
 						)]
 					,
 						
-					if(not level.player.get_stored_event('frogatto_has_met_prospera'),
-						speech_dialog(
-										set(level.player.animation, 'emote_confused'),
-							frogatto,	[~So yeah, what's going on again?~],
-							imoti,		[~I do not know.\\nPerhaps you can tell me?~],
-										set(level.player.animation, 'emote_geez'),
-							frogatto,	[~I was going to talk to Prospera...\\nWhat's the passphrase again?~],
-							imoti,		[~Shkronzilblah.~],
-							frogatto,	[~...~],
-										set(level.player.animation, 'emote_geez'),
-										[~Man... who comes <em>up</em> with this stuff?~],
+					if(not level.player.get_stored_event('defeated_gazer_boss'),
+						if(not level.player.get_stored_event('frogatto_has_met_prospera'),
+							speech_dialog(
+											set(level.player.animation, 'emote_confused'),
+								frogatto,	[~So yeah, what's going on again?~],
+								imoti,		[~I do not know.\\nPerhaps you can tell me?~],
+											set(level.player.animation, 'emote_geez'),
+								frogatto,	[~I was going to talk to Prospera...\\nWhat's the passphrase again?~],
+								imoti,		[~Shkronzilblah.~],
+								frogatto,	[~...~],
+											set(level.player.animation, 'emote_geez'),
+											[~Man... who comes <em>up</em> with this stuff?~],
+							),
+							speech_dialog(
+								imoti,		[~Hello again, my green friend.~],
+											set(level.player.animation, 'emote_raisedfinger'),
+								frogatto,	[~Hey!\\nSo how's chillin' by this tree, huh?~],
+								imoti,		[~It is most relaxing.~],
+											[~There are many matters to which I must attend.\\nMany things I must do, as time passes.~],
+											[~But until then, we are here -\\nsurrounded by the warmth of a midsummer day.~],
+											set(level.player.animation, 'emote_confused'),
+								frogatto,	[~Uhh...~],
+											set(level.player.animation, 'emote_nod'),
+											[~So I talked to Prospera...\\nShe's got me doing some stuff.~],
+								imoti,		[~That... It pleases me.  It is very good\\nthat you are doing that at this moment.~],			
+											set(level.player.animation, 'emote_geez'),
+								frogatto,	[~Yeah, so uh...~],
+											set(level.player.animation, 'emote_confused'),
+											[~... have fun relaxing or whatever.\\nBye!~],
+							)					
 						),
 						speech_dialog(
-							imoti,		[~Hello again, my green friend.~],
-										set(level.player.animation, 'emote_raisedfinger'),
-							frogatto,	[~Hey!\\nSo how's chillin' by this tree, huh?~],
-							imoti,		[~It is most relaxing.~],
-										[~There are many matters to which I must attend.\\nMany things I must do, as time passes.~],
-										[~But until then, we are here -\\nsurrounded by the warmth of a midsummer day.~],
-										set(level.player.animation, 'emote_confused'),
-							frogatto,	[~Uhh...~],
-										set(level.player.animation, 'emote_nod'),
-										[~So I talked to Prospera...\\nShe's got me doing some stuff.~],
-							imoti,		[~That... It pleases me.  It is very good\\nthat you are doing that at this moment.~],			
+							imoti,		[~How goes your quest, my gallant acquaintance?.~],
 										set(level.player.animation, 'emote_geez'),
-							frogatto,	[~Yeah, so uh...~],
+							frogatto,	[~I've got a lot to unpack, there.\\nTook on a giant monster.~],
 										set(level.player.animation, 'emote_confused'),
-										[~... have fun relaxing or whatever.\\nBye!~],
-						)					
+										[~Explored a huge mine near the town.\\nIt's been a wild ride.~],
+										set(level.player.animation, 'emote_raisedfinger'),
+										[~Prospera did get me fixed up with those\\nforce fields, so that's dealt with.~],
+							imoti,		[~How delightful.\\nOnward to further adventures!~],
+										set(level.player.animation, 'emote_nod'),
+							frogatto,	[~Of course!~],
+						)
+					
 					)
 					
 
