Fixed the issue where prospera's only removing her outdoor NPC after you beat the boss, not after you go inside and talk to her to get the quest.

--- a/data/level/Forest/prosperas-promontory.cfg
+++ b/data/level/Forest/prosperas-promontory.cfg
@@ -1166,7 +1166,12 @@
 				"min_x": -47,
 				"start_mode": "stand"
 			},
-			"on_start_level": "if( level.player.get_stored_event('defeated_gazer_boss'), remove_object(me) )",
+			"on_start_level": "if(
+				level.player.get_stored_event('defeated_gazer_boss')
+				or
+				level.player.get_stored_event('finished_initial_prospera_conversation'),
+				remove_object(me)
+			)",
 			"type": "prospera_npc",
 			"x": 96,
 			"y": 243
