--- a/data/level/Seaside/flooded-caverns.cfg
+++ b/data/level/Seaside/flooded-caverns.cfg
@@ -30,9 +30,9 @@
 			"custom": true,
 			"label": "_7c58fd05",
 			"property_data": {
-				"_x2_bound": 8416,
-				"_x_bound": -320,
-				"_y2_bound": 1984,
+				"_x2_bound": 8064,
+				"_x_bound": 0,
+				"_y2_bound": 1968,
 				"_y_bound": 652
 			},
 			"type": "water_controller_ocean",
@@ -2348,16 +2348,6 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 			"zorder": "player"
 		},
 		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "player"
-		},
-		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs
 ,
 ,
@@ -2448,8 +2438,8 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 	"water": {
 		"area": {
 			"color": [0.274509,0.0,0.0,0.196078],
-			"object": null,
-			"rect": [-320,652,8416,1984]
+			"object": "@eval deserialize('74ddcff7635a41d590d357142861e2c2')",
+			"rect": [0,652,8064,1968]
 		},
 		"zorder": 15
 	},
