--- a/data/level/Seaside/rock-a-fort.cfg
+++ b/data/level/Seaside/rock-a-fort.cfg
@@ -155,9 +155,9 @@
 			"custom": true,
 			"label": "_2404f1ca",
 			"property_data": {
-				"_x2_bound": 7912,
-				"_x_bound": -928,
-				"_y2_bound": 1568,
+				"_x2_bound": 7584,
+				"_x_bound": -480,
+				"_y2_bound": 1440,
 				"_y_bound": 652
 			},
 			"type": "water_controller_ocean",
@@ -2820,25 +2820,7 @@
 	"segment_height": 0,
 	"segment_width": 0,
 	"serialized_objects": {
-		"character": [
-			{
-				"_uuid": "02f000f818304a40b546b8439186f248",
-				"current_frame": "normal",
-				"custom": true,
-				"cycle": 2048,
-				"label": "_2404f1ca",
-				"property_data": {
-					"_x2_bound": 7912,
-					"_x_bound": -928,
-					"_y2_bound": 1568,
-					"_y_bound": 652
-				},
-				"time_in_frame": 48,
-				"type": "water_controller_ocean",
-				"x": 320,
-				"y": 672
-			}
-		]
+		"character": []
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
@@ -3190,16 +3172,6 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 			"zorder": "player"
 		},
 		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "player"
-		},
-		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs,ngs,,,,,,,,,,,,ngs,ngs,,,,,,,,,,,,,,,ngs,ngs
 ,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs,,,,,,,,,,,ngs,ngs,ngs,ngs,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs,ngs,ngs
@@ -3287,8 +3259,8 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 	"water": {
 		"area": {
 			"color": [0.274509,0.0,0.0,0.196078],
-			"object": "@eval deserialize('02f000f818304a40b546b8439186f248')",
-			"rect": [-928,652,7912,1568]
+			"object": "@eval deserialize('f6839af080014fd6b9354ffdde8906e2')",
+			"rect": [-480,652,7584,1440]
 		},
 		"zorder": 15
 	},
