Whatran now warns the player if they activate the bridge without talking to him first.

--- a/data/level/Forest/tempo-bridge.cfg
+++ b/data/level/Forest/tempo-bridge.cfg
@@ -766,9 +766,13 @@
 				"event": "tempo_bridge_platform_active"
 			},
 			"on_custom_trigger_on_hook": "[
-				transient_speech_dialog(
-					whatran, [~Yo.~]
-				),
+				if(not level.player.get_stored_event('talked_to_whatran') and not level.player.get_stored_event('whatran_warned'),[
+					transient_speech_dialog(
+						whatran, [~I'd think twice before\\nheading that way!~]
+						),
+					level.player.store_event('whatran_warned',1)
+					]
+				)
 			] where whatran = find_or_die(level.chars, value is obj whatran_npc)",
 			"type": "lever_wooden",
 			"x": 672,
