Working on resolving the issue with cannonballs not bouncing off of gates.

--- a/data/objects/props-interactive/obstacles/gate.cfg
+++ b/data/objects/props-interactive/obstacles/gate.cfg
@@ -4,7 +4,7 @@ zorder: "@include data/zorder.cfg:exterior_decor",
 prototype: ["triggerable"],
 has_feet: false,
 always_active: true,
-solid_dimensions: ["player","common","~thrown"],
+solid_dimensions: ["player","common","thrown"],
 collide_dimensions: ["key"],
 adjust_feet_on_animation_change: false,
 timer_frequency: 5,
