--- a/data/objects/enemies/milgramen/bunny_ball_tosser.cfg
+++ b/data/objects/enemies/milgramen/bunny_ball_tosser.cfg
@@ -113,6 +113,7 @@ object_type: [
 		always_active: true,
 		hitpoints: 32,
 		solid_area: [4,4,8,8],
+		solid_dimensions: ["~thrown"],
 		properties: {
 			attack_damage: "if(team='evil', 2, lib.math.round(standard_thrown_damage * 1.5))",
 			damage_cooldown: 5,
