Made the cannonball bunnies deal 1 damage on casual, 2 on challenging, rather than 2 everywhere.  Totally redesigned the first puzzle involving them and a gate, on killer-bunnies.

--- a/data/objects/enemies/milgramen/bunny_ball_tosser.cfg
+++ b/data/objects/enemies/milgramen/bunny_ball_tosser.cfg
@@ -115,7 +115,7 @@ object_type: [
 		solid_area: [4,4,8,8],
 		solid_dimensions: ["~thrown"],
 		properties: {
-			attack_damage: "if(team='evil', 2, lib.math.round(standard_thrown_damage * 1.5))",
+			attack_damage: "if(team='evil', if(higher_difficulty, 2, 1), lib.math.round(standard_thrown_damage * 1.5))",
 			damage_cooldown: 5,
 			material_sound: "enum cannon_ball",
 
