Gave the hud coin icon a proper zorder.

--- a/data/objects/gui-components/hud-components/hud_gold_display.cfg
+++ b/data/objects/gui-components/hud-components/hud_gold_display.cfg
@@ -57,6 +57,7 @@
 		always_active: true,
 		use_absolute_screen_coordinates: true,
 		serializable: false,
+		zorder: "@include data/zorder.cfg:in_front_of_everything",
 		
 		on_end_anim: "animation('normal')",
 		
