--- a/data/level/Dungeon/killer-bunnies.cfg
+++ b/data/level/Dungeon/killer-bunnies.cfg
@@ -2307,6 +2307,15 @@
 			"type": "sound_source_individual",
 			"x": 3996,
 			"y": 830
+		},
+		{
+			"_uuid": "caf64be2688b47689e1706efc057224d",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_21c85efd",
+			"type": "soda_machine",
+			"x": 2478,
+			"y": -95
 		}
 	],
 	"dimensions": [-480,-1984,5151,1760],
@@ -2318,24 +2327,6 @@
 	"segment_width": 0,
 	"serialized_objects": {
 		"character": [
-			{
-				"_uuid": "7593b65fbc1b4f4a98aff7b3613e7b24",
-				"activation_area": [2351,-1220,3092,-993],
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"label": "_210e8fa8",
-				"particles": "bubbles,fizz",
-				"property_data": {
-					"_x2_bound": 3043,
-					"_x_bound": 2401,
-					"_y2_bound": -992,
-					"_y_bound": -1120
-				},
-				"type": "acid_controller",
-				"x": 2688,
-				"y": -1120
-			},
 			{
 				"_uuid": "1f6dbe17b1464980b657cf42db214c6c",
 				"activation_area": [1134,1049,1841,1375],
@@ -2357,6 +2348,41 @@
 				"y": 1152
 			},
 			{
+				"_uuid": "17b5c8e17c9a4157a59685b4b9133b56",
+				"activation_area": [-50,1308,1105,1599],
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_61fc2ce0",
+				"property_data": {
+					"_x2_bound": 1056,
+					"_x_bound": 0,
+					"_y2_bound": 1600,
+					"_y_bound": 1408
+				},
+				"type": "acid_controller",
+				"x": 96,
+				"y": 1408
+			},
+			{
+				"_uuid": "7593b65fbc1b4f4a98aff7b3613e7b24",
+				"activation_area": [2351,-1220,3092,-993],
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_210e8fa8",
+				"particles": "bubbles,fizz",
+				"property_data": {
+					"_x2_bound": 3043,
+					"_x_bound": 2401,
+					"_y2_bound": -992,
+					"_y_bound": -1120
+				},
+				"type": "acid_controller",
+				"x": 2688,
+				"y": -1120
+			},
+			{
 				"_uuid": "c083c24f29194fc39b6e0a2c94125b5d",
 				"activation_area": [1772,28,2353,319],
 				"created": true,
@@ -2373,23 +2399,6 @@
 				"type": "acid_controller",
 				"x": 1856,
 				"y": 128
-			},
-			{
-				"_uuid": "17b5c8e17c9a4157a59685b4b9133b56",
-				"activation_area": [-50,1308,1105,1599],
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"label": "_61fc2ce0",
-				"property_data": {
-					"_x2_bound": 1056,
-					"_x_bound": 0,
-					"_y2_bound": 1600,
-					"_y_bound": 1408
-				},
-				"type": "acid_controller",
-				"x": 96,
-				"y": 1408
 			}
 		]
 	},
@@ -2572,45 +2581,6 @@
 			"y": -1120,
 			"y_speed": 100,
 			"zorder": "background_parallax_floors"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_objects"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl
@@ -3043,116 +3013,7 @@ csd,csd,csd,csd,,,csd,csd,csd,csd,csd,csd,csd,,,,,,,,,,,,,,,,,,,,,,,,,,,csd,csd,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "exterior_background_tiles"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "liquid_particle_effects"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_behind_wall_objects"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "interior_back_wall_decor"
+			"zorder": "player"
 		},
 		{
 			"tiles": ",,,,,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk,dbk
@@ -3574,279 +3435,6 @@ dsb,dsb,dsb,dsb,dsb
 			"y": -1504,
 			"y_speed": 100,
 			"zorder": "interior_shelves_and_stairs"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_platform_objects"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_decor"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "interior_decor"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "player"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": 51
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "shadow_overlay"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Killer Bunnies",
