Set up glowing lights on the cannonballs, as well as giving them proper hit reactions and death effects.

--- a/data/object_prototypes/base/throwable_projectile.cfg
+++ b/data/object_prototypes/base/throwable_projectile.cfg
@@ -20,6 +20,12 @@ object_level_collisions: true,
 solid_dimensions: [],
 
 properties: {
+#-------------------------- constructor/destructor logic --------------------------#
+	throwable_object_contructor: "commands :: throwable_projectile_contructor",
+
+	throwable_projectile_contructor: "commands :: null",	//for any specific types of throwable objects, like cannonballs
+
+
 #-------------------------- hittable overrides --------------------------#
 	has_mini_hp_bar: "bool :: false",
 	taxonomy: "TaxonomyType :: enum neutral",
