--- a/data/objects/enemies/milgramen/bunny_ball_tosser.cfg
+++ b/data/objects/enemies/milgramen/bunny_ball_tosser.cfg
@@ -115,6 +115,14 @@ object_type: [
 		solid_area: [4,4,8,8],
 		solid_dimensions: ["~thrown"],
 		properties: {
+		#-------------------------- constructor/destructor logic --------------------------#
+			throwable_projectile_contructor: "commands :: [
+				set(fall_through_platforms,-1),
+				add_object(_glow_effect),
+			]",
+
+
+		#-------------------------- hittable overrides --------------------------#
 			attack_damage: "if(team='evil', if(higher_difficulty, 2, 1), lib.math.round(standard_thrown_damage * 1.5))",
 			damage_cooldown: 5,
 			material_sound: "enum cannon_ball",
@@ -126,11 +134,28 @@ object_type: [
 			
 		#-------------------------- terrain collisions --------------------------#
 			terrain_response_head: "[ set(velocity_y, -velocity_y), impact_cloud_silent(mid_x,y,'small') ]",			
-			terrain_response_side: "[ add(hitpoints, -1), set(velocity_x, -(velocity_x*95)/100), impact_cloud_silent(x2,mid_y,'small') ]",
-			terrain_response_feet: "[ add(hitpoints, -1), impact_cloud_silent(mid_x,y2,'small'), set(velocity_y, -(velocity_y*7)/10) ]",
+			terrain_response_side: "[ handle_damage_sourceless(enum neutral, 1), set(velocity_x, -(velocity_x*95)/100), impact_cloud_silent(x2,mid_y,'small') ]",
+			terrain_response_feet: "[ handle_damage_sourceless(enum neutral, 1), impact_cloud_silent(mid_x,y2,'small'), set(velocity_y, -(velocity_y*7)/10) ]",
 
+
+		#-------------------------- terrain collisions --------------------------#
+			_glow_effect: {
+				type: "obj effects_attache_glow_source",
+				init: "object('effects_attache_glow_source', mid_x, mid_y, {
+					time_to_die: 0,
+					parent: me,
+					base_alpha: 160,
+					flicker_type: enum sputter,
+					scale_factor: 0.32,
+					variable_name: '_glow_effect',
+				})",
+				persistent: false,
+			},
+
+			death_effects: "def(string type) -> commands [
+				play_death_effects('porcelain', enum tiny)
+			]",
 		},
-		on_create: "set(fall_through_platforms,-1)",
 
 		
 
