Added a cheap cheat code to give you the progression level of mortimer's house.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -315,6 +315,11 @@ properties: {
 		map(ability_list_full, set_item_amount(value,1)),
 		map(super_ability_list_full, set_item_amount(value,1)),
 		]",	
+	hax_mtm: "[
+		;set_item_amount(enum item_magic_map, 1),
+		;add_item(enum item_heart_container, 1),
+		;add_item(enum item_fire_breath_talisman, 1),
+	]",
 	choppa: "set(_jump_cheat,true)",
 	smite: "map(filter(level.chars, value is obj hittable), if(value.team = 'evil', value.force_death()))",
 	supes: "[hax,choppa,set(invincible,-1)]",
