--- a/data/level/Forest/putrid-pools.cfg
+++ b/data/level/Forest/putrid-pools.cfg
@@ -1120,6 +1120,13 @@
 				"level": "putrid-pools.cfg",
 				"objects": []
 			},
+			"property_data": {
+				"stored_events": {
+					"putrid_pools_front_gate_unlocked": 0,
+					"putrid_pools_rear_gate_unlocked": 0,
+					"started_game": 1
+				}
+			},
 			"type": "frogatto_playable",
 			"x": -1632,
 			"y": -64
@@ -2578,15 +2585,15 @@
 			"custom": true,
 			"label": "_691c143a",
 			"property_data": {
-				"_desired_height": -806,
-				"_dive_height": -518,
-				"_x2_bound": 2234,
-				"_x_bound": 1786,
+				"_desired_height": -1280,
+				"_dive_height": -1024,
+				"_x2_bound": 2202,
+				"_x_bound": 1754,
 				"original_level_we_spawned_on": "putrid-pools.cfg"
 			},
 			"type": "ploompus",
-			"x": 1952,
-			"y": -864
+			"x": 1920,
+			"y": -1312
 		}
 	],
 	"dimensions": [-5152,-4480,6975,2591],
